--- a/.vscode/day01.tt
+++ b/.vscode/day01.tt
@@ -23,6 +23,36 @@ templates part1
     $@(position:) -> !update-zeroes
 end part1
 
+templates part2
+  sink update-zeroes
+    when <..0"1"> do
+      @part2(zeroes:): $@part2(zeroes:) - $ ~/ 100"1" + 1"1";
+    when <100"1"..> do
+      @part2(zeroes:): $@part2(zeroes:) + $ ~/ 100"1";
+  end update-zeroes
+  @: { zeroes: 0"1", position: 50"1"};
+  $... -> #
+  $@(zeroes:) !
+
+  when <"L"?($@(position:) <=0"1">)> do
+    def new: ($@(position:) - $)"1";
+    // Don't double-count the zero
+    @:  {position: $new mod 100"1", zeroes: $@(zeroes:) - 1"1"};
+    $new -> !update-zeroes
+  when <"L"> do
+    def new: ($@(position:) - $)"1";
+    @(position:):  $new mod 100"1";
+    $new -> !update-zeroes
+  when <"R"> do
+    def new: ($@(position:) + $)"1";
+    @(position:): $new mod 100"1";
+    $new -> !update-zeroes
+end part2
+
 $instructions -> part1 -> !OUT::write
+'
+' -> !OUT::write
+
+$instructions -> part2 -> !OUT::write
 '
 ' -> !OUT::write
