--- a/day02.tt
+++ b/day02.tt
@@ -6,16 +6,41 @@ end parse-intervals
 def intervals: $IN::readline -> parse-intervals;
 
 processor PatternGenerator
-  @: {top: 10"1", value: 0"1"};
+  processor Repeat
+    def top: $(top:);
+    def base: $(value:);
+    @: $(value:);
+
+    source multiple
+      @Repeat: ($@Repeat * $top + $base) * $top + $base;
+      $@Repeat !
+    end multiple
+  end Repeat
+
+  @: {top: 10"1", value: 0"1", half-multiplier: 10"1", half: 1"1"};
   source next
     $@PatternGenerator(value:) + 1"1" -> #
     $@PatternGenerator -> $.value * $.top + $.value !
 
     when <$@PatternGenerator(top:)..> do
-      @PatternGenerator: { top: $@PatternGenerator(top:) * 10"1", value: $ };
+      @PatternGenerator: $@PatternGenerator(
+        { top: §(top:) * 10"1",
+          value: $,
+          half-multiplier: (§(half-multiplier:) * 10"1") mod 99"1",
+          half: §(half:) * §(half-multiplier:)
+        });
     otherwise
       @PatternGenerator(value:): $;
  end next
+
+ source repeater
+   // Assumption: only need to exclude values that are a double-pattern
+   $@PatternGenerator -> #
+   
+   when <{half-multiplier: <=10"1">}
+     |{half-multiplier: <=1"1">}?($(value:) ~/ $(half:) <~=$(value:) mod $(half:)>)> do
+     $@PatternGenerator -> Repeat !
+  end repeater
 end PatternGenerator
 
 processor Accumulator
@@ -53,3 +78,29 @@ end part1
 $intervals -> part1 -> !OUT::write
 '
 ' -> !OUT::write
+
+templates part2
+  def accumulator: $ -> Accumulator;
+  def generator: $PatternGenerator;
+  $generator::next -> #
+  $accumulator::result !
+
+  otherwise
+    $generator::repeater -> \(
+        def repeater: $;
+        $repeater::multiple -> #
+
+        otherwise
+          $ -> accumulator::add-in-range -> $repeater::multiple -> #
+    \) -> !VOID
+    $ -> accumulator::add-in-range -> $generator::next -> #
+end part2
+
+$intervals -> part2 -> !OUT::write
+'
+' -> !OUT::write
+
+test 'part 2'
+  assert '11-22,95-115,998-1012,1188511880-1188511890,222220-222224,1698522-1698528,446443-446449,38593856-38593862,565653-565659,824824821-824824827,2121212118-2121212124'
+  -> parse-intervals -> part2 <=4174379265"1"> 'example'
+end 'part 2'
